--- a/Documentation.html
+++ b/Documentation.html
@@ -257,8 +257,8 @@ En resumen, el estado de Querétaro sí posee zonas con viabilidad eólica, pero
       <div style="background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); width: 280px;">
         <h4>🖼️ Cartel del Proyecto</h4>
         <p>Versión final del cartel presentado en el stand de investigación.</p>
-        <a href="Documents/new cartel.pdf" target="_blank" class="btn btn-primary">Visualizar</a>
-        <a href="Documents/new cartel.pdf" download class="btn btn-outline-secondary mt-2">Descargar PDF</a>
+        <a href="Documents/Cartel definitico.pdf" target="_blank" class="btn btn-primary">Visualizar</a>
+        <a href="Documents/Cartel definitico.pdf" download class="btn btn-outline-secondary mt-2">Descargar PDF</a>
       </div>
 
       <!-- Botón para Protocolo -->
