--- a/Documentation.html
+++ b/Documentation.html
@@ -275,7 +275,7 @@ En resumen, el estado de Querétaro sí posee zonas con viabilidad eólica, pero
 <section id="glosario-referencias" style="padding: 50px; background-color: #f9f9f9;">
   <div style="max-width: 1000px; margin: auto;">
   
-    <h2 style="color: #1e3767;">📚 Referencias (APA 7)</h2>
+    <h2 style="color: #1e3767;">📚 Referencias</h2>
 
     <h4>1. Marco teórico y fundamentos técnicos</h4>
     <ul>
