--- a/mapa_colores_con_redirecciones.html
+++ b/mapa_colores_con_redirecciones.html
@@ -7,6 +7,8 @@
 
 <meta charset="utf-8"/>
 <title>Mapa y Municipios de Querétaro</title>
+  <link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
 <style>
   .zoom-wrapper {
   overflow: auto;
