--- a/Calculator.html
+++ b/Calculator.html
@@ -6,6 +6,8 @@
   <title>Calculadora Eólica - Querétaro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
   <style>
     body {
       font-family: 'Inter', sans-serif;
