--- a/Municipios/San_juan_del_rio.html
+++ b/Municipios/San_juan_del_rio.html
@@ -3,6 +3,8 @@
 <html lang="es">
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard San Juan del Río</title>
