--- a/Documentation.html
+++ b/Documentation.html
@@ -249,7 +249,7 @@ En resumen, el estado de Querétaro sí posee zonas con viabilidad eólica, pero
   </section>
   <section id="descargas" style="padding: 50px; background-color: #eef3f7;">
   <div style="max-width: 900px; margin: auto; text-align: center;">
-    <h2 style="color: #1e3767;">📄 Descargas del Proyecto</h2>
+    <h2 style="color: #1e3767;"> Descargas del Proyecto</h2>
     <p style="margin-bottom: 30px;">
       A continuación puedes visualizar o descargar los documentos clave del proyecto para su consulta o difusión:
     </p>
