--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="box">
         <img src="Images/calculadora.png" alt="Calculator Icon">
         <a href="Calculator.html">
-          <h3>Park Calculator</h3>
+          <h3>Calculadora</h3>
         </a>
       </div>
     
