--- a/Municipios/Amealco_de_bonfil.html
+++ b/Municipios/Amealco_de_bonfil.html
@@ -105,19 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Amealco de Bonfil presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
-
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Amealco de Bonfil presenta velocidades medias entre <strong>3 y 4 m/s</strong> a 80 metros de altura, lo que indica una <strong>viabilidad eólica media</strong> con el uso de aerogeneradores diseñados para operar con baja velocidad de corte.</p>
+  <p>➡️ Puede ser viable para proyectos de pequeña o mediana escala, especialmente en comunidades rurales, con tecnologías adaptadas a condiciones de viento moderado.</p>
 </div>
+
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>El municipio tiene una composición rural e indígena significativa, lo cual requiere un enfoque participativo y sustentable. Además, se han realizado mejoras recientes en la infraestructura eléctrica en algunas zonas.</p>
+  <p>➡️ Se recomienda análisis de microzonificación e identificación de áreas con acceso vial y conexión eléctrica cercana para facilitar la implementación.</p>
+</div>
+
 
 <script>
   const dashboardData = {"2018": {"kpi_10": 3.14, "kpi_80": 4.27, "monthly_10": [2.98, 3.23, 3.21, 3.31, 3.3, 3.33, 3.31, 3.29, 3.05, 2.9, 2.9, 2.9], "monthly_80": [4.05, 4.39, 4.36, 4.49, 4.48, 4.52, 4.49, 4.47, 4.14, 3.94, 3.94, 3.94], "hist_10": [0, 4, 8, 0, 0], "hist_80": [0, 0, 3, 9, 0], "season_10": [3.04, 3.27, 3.31, 2.95], "season_80": [4.13, 4.44, 4.49, 4.01]}, "2019": {"kpi_10": 3.13, "kpi_80": 4.25, "monthly_10": [3.1, 3.12, 3.21, 3.25, 3.19, 3.31, 3.29, 3.2, 3.08, 2.97, 2.9, 2.9], "monthly_80": [4.21, 4.24, 4.36, 4.41, 4.33, 4.49, 4.47, 4.35, 4.18, 4.03, 3.94, 3.94], "hist_10": [0, 3, 9, 0, 0], "hist_80": [0, 0, 2, 10, 0], "season_10": [3.04, 3.22, 3.27, 2.98], "season_80": [4.13, 4.37, 4.44, 4.05]}, "2020": {"kpi_10": 3.18, "kpi_80": 4.32, "monthly_10": [2.96, 3.26, 3.4, 3.31, 3.4, 3.33, 3.29, 3.16, 3.04, 3.0, 3.02, 3.04], "monthly_80": [4.02, 4.43, 4.62, 4.49, 4.62, 4.52, 4.47, 4.29, 4.13, 4.07, 4.1, 4.13], "hist_10": [0, 1, 11, 0, 0], "hist_80": [0, 0, 0, 12, 0], "season_10": [3.09, 3.37, 3.26, 3.02], "season_80": [4.19, 4.58, 4.43, 4.1]}, "2021": {"kpi_10": 3.16, "kpi_80": 4.29, "monthly_10": [3.06, 3.16, 3.17, 3.4, 3.4, 3.39, 3.2, 3.15, 3.03, 2.96, 2.96, 3.05], "monthly_80": [4.16, 4.29, 4.3, 4.62, 4.62, 4.6, 4.35, 4.28, 4.11, 4.02, 4.02, 4.14], "hist_10": [0, 2, 10, 0, 0], "hist_80": [0, 0, 0, 12, 0], "season_10": [3.09, 3.32, 3.25, 2.98], "season_80": [4.2, 4.51, 4.41, 4.05]}, "2022": {"kpi_10": 3.13, "kpi_80": 4.26, "monthly_10": [2.95, 3.18, 3.27, 3.4, 3.17, 3.33, 3.4, 3.12, 3.0, 2.92, 2.9, 2.96], "monthly_80": [4.01, 4.32, 4.44, 4.62, 4.3, 4.52, 4.62, 4.24, 4.07, 3.97, 3.94, 4.02], "hist_10": [0, 4, 8, 0, 0], "hist_80": [0, 0, 2, 10, 0], "season_10": [3.03, 3.28, 3.28, 2.94], "season_80": [4.12, 4.45, 4.46, 3.99]}, "2023": {"kpi_10": 3.14, "kpi_80": 4.26, "monthly_10": [2.95, 3.11, 3.34, 3.4, 3.34, 3.28, 3.19, 3.14, 2.9, 2.9, 3.0, 3.09], "monthly_80": [4.01, 4.22, 4.54, 4.62, 4.54, 4.45, 4.33, 4.26, 3.94, 3.94, 4.07, 4.2], "hist_10": [0, 3, 9, 0, 0], "hist_80": [0, 0, 2, 10, 0], "season_10": [3.05, 3.36, 3.2, 2.93], "season_80": [4.14, 4.57, 4.35, 3.98]}, "2024": {"kpi_10": 3.14, "kpi_80": 4.27, "monthly_10": [2.9, 3.28, 3.22, 3.34, 3.4, 3.4, 3.33, 3.03, 2.96, 2.91, 2.9, 3.06], "monthly_80": [3.94, 4.45, 4.37, 4.54, 4.62, 4.62, 4.52, 4.11, 4.02, 3.95, 3.94, 4.16], "hist_10": [0, 4, 8, 0, 0], "hist_80": [0, 0, 3, 9, 0], "season_10": [3.08, 3.32, 3.25, 2.92], "season_80": [4.18, 4.51, 4.42, 3.97]}, "months": ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]};
