--- a/Municipios/Pinal_de_amoles.html
+++ b/Municipios/Pinal_de_amoles.html
@@ -106,18 +106,19 @@
   <canvas id="seasonChart"></canvas>
 
   <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Pinal de Amoles presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
-
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Pinal de Amoles presenta velocidades medias entre <strong>3.6 y 4.0 m/s</strong> a 80 metros, lo que representa una <strong>viabilidad eólica media</strong>. Aunque no es ideal para grandes parques eólicos, es apta para <strong>microproyectos o sistemas híbridos</strong> adaptados a zonas rurales.</p>
+  <p>➡️ La consistencia estacional de las velocidades y su ubicación en zonas elevadas pueden favorecer la captación eólica con tecnología adecuada.</p>
 </div>
+
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Pinal de Amoles es una región serrana con ecosistemas protegidos y una alta densidad forestal. El municipio forma parte de la Reserva de la Biosfera "Sierra Gorda", lo que limita el uso de grandes extensiones de tierra para desarrollos energéticos intensivos.</p>
+  <p>➡️ Se recomienda identificar <strong>áreas ya intervenidas o cercanas a comunidades</strong> para minimizar el impacto ambiental y facilitar el acceso. La aceptación social y el respeto por las comunidades indígenas y el entorno natural son clave para cualquier implementación.</p>
+</div>
+
+
 
 <script>
   const dashboardData = {"2018": {"kpi_10": 2.7, "kpi_80": 3.67, "monthly_10": [2.56, 2.63, 2.86, 3.09, 2.89, 2.97, 2.76, 2.81, 2.67, 2.43, 2.36, 2.42], "monthly_80": [3.48, 3.57, 3.88, 4.2, 3.92, 4.03, 3.75, 3.82, 3.63, 3.3, 3.2, 3.29], "hist_10": [0, 11, 1, 0, 0], "hist_80": [0, 0, 10, 2, 0], "season_10": [2.54, 2.95, 2.85, 2.49], "season_80": [3.45, 4.0, 3.87, 3.38]}, "2019": {"kpi_10": 2.68, "kpi_80": 3.63, "monthly_10": [2.5, 2.77, 2.78, 2.98, 2.95, 3.1, 2.71, 2.68, 2.53, 2.33, 2.32, 2.46], "monthly_80": [3.39, 3.76, 3.78, 4.05, 4.01, 4.21, 3.68, 3.64, 3.44, 3.16, 3.15, 3.34], "hist_10": [0, 11, 1, 0, 0], "hist_80": [0, 0, 9, 3, 0], "season_10": [2.58, 2.9, 2.83, 2.39], "season_80": [3.5, 3.95, 3.84, 3.25]}, "2020": {"kpi_10": 2.7, "kpi_80": 3.67, "monthly_10": [2.57, 2.74, 2.82, 2.9, 3.07, 2.85, 2.8, 2.68, 2.55, 2.41, 2.41, 2.61], "monthly_80": [3.49, 3.72, 3.83, 3.94, 4.17, 3.87, 3.8, 3.64, 3.46, 3.27, 3.27, 3.54], "hist_10": [0, 11, 1, 0, 0], "hist_80": [0, 0, 11, 1, 0], "season_10": [2.64, 2.93, 2.78, 2.46], "season_80": [3.58, 3.98, 3.77, 3.33]}, "2021": {"kpi_10": 2.72, "kpi_80": 3.69, "monthly_10": [2.54, 2.75, 2.91, 2.94, 2.94, 2.94, 2.91, 2.66, 2.63, 2.47, 2.34, 2.55], "monthly_80": [3.45, 3.73, 3.95, 3.99, 3.99, 3.99, 3.95, 3.61, 3.57, 3.35, 3.18, 3.46], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.61, 2.93, 2.84, 2.48], "season_80": [3.55, 3.98, 3.85, 3.37]}, "2022": {"kpi_10": 2.7, "kpi_80": 3.67, "monthly_10": [2.5, 2.71, 2.94, 3.02, 3.0, 2.85, 2.79, 2.68, 2.63, 2.43, 2.43, 2.45], "monthly_80": [3.39, 3.68, 3.99, 4.1, 4.07, 3.87, 3.79, 3.64, 3.57, 3.3, 3.3, 3.33], "hist_10": [0, 10, 2, 0, 0], "hist_80": [0, 0, 10, 2, 0], "season_10": [2.55, 2.99, 2.77, 2.5], "season_80": [3.47, 4.05, 3.77, 3.39]}, "2023": {"kpi_10": 2.7, "kpi_80": 3.66, "monthly_10": [2.52, 2.81, 2.75, 3.06, 2.97, 3.01, 2.79, 2.6, 2.58, 2.5, 2.43, 2.34], "monthly_80": [3.42, 3.82, 3.73, 4.16, 4.03, 4.09, 3.79, 3.53, 3.5, 3.39, 3.3, 3.18], "hist_10": [0, 10, 2, 0, 0], "hist_80": [0, 0, 9, 3, 0], "season_10": [2.56, 2.93, 2.8, 2.5], "season_80": [3.47, 3.97, 3.8, 3.4]}, "2024": {"kpi_10": 2.7, "kpi_80": 3.67, "monthly_10": [2.56, 2.74, 2.91, 2.97, 2.93, 2.9, 2.95, 2.75, 2.53, 2.4, 2.31, 2.51], "monthly_80": [3.48, 3.72, 3.95, 4.03, 3.98, 3.94, 4.01, 3.73, 3.44, 3.26, 3.14, 3.41], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 10, 2, 0], "season_10": [2.6, 2.94, 2.87, 2.41], "season_80": [3.54, 3.99, 3.89, 3.28]}, "months": ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]};
