--- a/Municipios/Arroyo_seco.html
+++ b/Municipios/Arroyo_seco.html
@@ -105,18 +105,17 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Arroyo Seco presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+ <h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Arroyo Seco mantiene un promedio anual cercano a <strong>4.6 m/s</strong> a 80 m de altura, con meses pico superiores a 5 m/s. Esta dinámica justifica una <strong>viabilidad eólica media</strong>, ideal para tecnología adaptada a rangos intermedios.</p>
+  <p>➡️ El comportamiento constante durante primavera y verano sugiere buena estabilidad para modelos de generación distribuida en zonas rurales.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Situado en la Sierra Gorda, el municipio presenta alto valor ecológico y topografía accidentada. Aunque existen accesos básicos, muchas localidades se encuentran dispersas y en laderas.</p>
+  <p>➡️ Se aconseja priorizar <strong>instalaciones comunitarias</strong> en espacios ya intervenidos, como techos de escuelas o centros de salud, maximizando impacto social y minimizando afectación ambiental.</p>
 </div>
 
 <script>
