--- a/Municipios/Cadereyta_de_montes.html
+++ b/Municipios/Cadereyta_de_montes.html
@@ -105,19 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Cadereyta de Montes presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
-
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Con un promedio anual de <strong>3.5 m/s</strong> a 80 m, Cadereyta de Montes presenta una <strong>viabilidad eólica baja</strong>, limitada por velocidades fuera del rango óptimo para generación convencional.</p>
+  <p>➡️ Puede considerarse solo para soluciones puntuales o experimentales en sitios con aceleración del viento comprobada mediante medición en campo.</p>
 </div>
+
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>El municipio combina zonas semidesérticas con núcleos rurales dispersos. Aunque cuenta con espacio físico, su infraestructura eléctrica y vial es irregular en áreas clave.</p>
+  <p>➡️ La implementación debe centrarse en <strong>usos aislados</strong>, como sistemas autónomos en comunidades agrícolas sin acceso confiable a la red.</p>
+</div>
+
 
 <script>
   const dashboardData = {"2018": {"kpi_10": 2.56, "kpi_80": 3.48, "monthly_10": [2.35, 2.25, 2.36, 2.27, 2.57, 2.6, 2.77, 2.78, 2.77, 2.84, 2.63, 2.57], "monthly_80": [3.19, 3.06, 3.2, 3.08, 3.49, 3.53, 3.76, 3.78, 3.76, 3.86, 3.57, 3.49], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.39, 2.4, 2.72, 2.75], "season_80": [3.25, 3.26, 3.69, 3.73]}, "2019": {"kpi_10": 2.63, "kpi_80": 3.57, "monthly_10": [2.54, 2.31, 2.22, 2.37, 2.56, 2.71, 2.8, 2.87, 2.94, 2.91, 2.77, 2.55], "monthly_80": [3.45, 3.14, 3.01, 3.22, 3.48, 3.68, 3.8, 3.9, 3.99, 3.95, 3.76, 3.46], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.47, 2.38, 2.79, 2.87], "season_80": [3.35, 3.24, 3.79, 3.9]}, "2020": {"kpi_10": 2.6, "kpi_80": 3.54, "monthly_10": [2.5, 2.37, 2.23, 2.28, 2.41, 2.7, 2.78, 2.88, 2.97, 2.8, 2.7, 2.62], "monthly_80": [3.39, 3.22, 3.03, 3.1, 3.27, 3.67, 3.78, 3.91, 4.03, 3.8, 3.67, 3.56], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 11, 1, 0], "season_10": [2.5, 2.31, 2.79, 2.82], "season_80": [3.39, 3.13, 3.79, 3.83]}, "2021": {"kpi_10": 2.58, "kpi_80": 3.51, "monthly_10": [2.42, 2.28, 2.23, 2.3, 2.47, 2.44, 2.85, 2.92, 2.99, 2.82, 2.74, 2.51], "monthly_80": [3.29, 3.1, 3.03, 3.12, 3.35, 3.31, 3.87, 3.97, 4.06, 3.83, 3.72, 3.41], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 11, 1, 0], "season_10": [2.4, 2.33, 2.74, 2.85], "season_80": [3.27, 3.17, 3.72, 3.87]}, "2022": {"kpi_10": 2.61, "kpi_80": 3.55, "monthly_10": [2.38, 2.28, 2.25, 2.31, 2.51, 2.62, 2.85, 2.9, 2.88, 2.86, 2.68, 2.82], "monthly_80": [3.23, 3.1, 3.06, 3.14, 3.41, 3.56, 3.87, 3.94, 3.91, 3.88, 3.64, 3.83], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.49, 2.36, 2.79, 2.81], "season_80": [3.39, 3.2, 3.79, 3.81]}, "2023": {"kpi_10": 2.59, "kpi_80": 3.52, "monthly_10": [2.44, 2.34, 2.3, 2.29, 2.26, 2.61, 2.81, 2.8, 3.0, 2.93, 2.7, 2.59], "monthly_80": [3.31, 3.18, 3.12, 3.11, 3.07, 3.54, 3.82, 3.8, 4.07, 3.98, 3.67, 3.52], "hist_10": [0, 11, 1, 0, 0], "hist_80": [0, 0, 11, 1, 0], "season_10": [2.46, 2.28, 2.74, 2.88], "season_80": [3.34, 3.1, 3.72, 3.91]}, "2024": {"kpi_10": 2.6, "kpi_80": 3.53, "monthly_10": [2.38, 2.22, 2.25, 2.28, 2.56, 2.64, 2.75, 2.85, 2.92, 2.88, 2.88, 2.56], "monthly_80": [3.23, 3.01, 3.06, 3.1, 3.48, 3.59, 3.73, 3.87, 3.97, 3.91, 3.91, 3.48], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.39, 2.36, 2.75, 2.89], "season_80": [3.24, 3.21, 3.73, 3.93]}, "months": ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]};
