--- a/Municipios/Colon.html
+++ b/Municipios/Colon.html
@@ -107,18 +107,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Colón presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Colón mantiene velocidades sostenidas de <strong>4.3 a 4.4 m/s</strong> a 80 metros de altura, con gran uniformidad mensual y estacional. Este comportamiento respalda una <strong>viabilidad eólica alta</strong> para aplicaciones comerciales o comunitarias.</p>
+  <p>➡️ Se trata de uno de los municipios más consistentes del estado en cuanto a recurso eólico, ideal para proyectos escalables de media potencia.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Gracias a su ubicación estratégica y al desarrollo del Aeropuerto Intercontinental y zonas industriales como el Parque Aeroespacial, Colón dispone de buena conectividad eléctrica y vial, facilitando la logística de instalación y mantenimiento.</p>
+  <p>➡️ Se recomienda aprovechar polígonos industriales o zonas ejidales con vocación energética para implementar proyectos que sumen a su creciente perfil tecnológico.</p>
+</div>
+
 </div>
 
 <script>
