--- a/Municipios/Corregidora.html
+++ b/Municipios/Corregidora.html
@@ -106,18 +106,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Corregidora presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Con velocidades promedio entre <strong>4.1 y 4.4 m/s</strong> a 80 metros, Corregidora se posiciona en un rango de <strong>viabilidad eólica media</strong>. La estacionalidad es estable, aunque con picos moderados en primavera y verano.</p>
+  <p>➡️ Puede ser considerado para proyectos piloto o integración en esquemas de generación distribuida en áreas periurbanas.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Corregidora es un municipio altamente urbanizado, con crecimiento residencial acelerado y zonas industriales en expansión. La disponibilidad de terreno abierto es reducida y con alta presión inmobiliaria.</p>
+  <p>➡️ Se recomienda focalizar el aprovechamiento eólico en <strong>instalaciones sobre infraestructura existente</strong>, como techos industriales, escuelas o espacios públicos, donde no se requiera uso exclusivo de suelo.</p>
+</div>
+
 </div>
 
 <script>
