--- a/Municipios/Ezequiel Montes.html
+++ b/Municipios/Ezequiel Montes.html
@@ -105,18 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Ezequiel Montes presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Las velocidades promedio en Ezequiel Montes rondan los <strong>3.7 m/s</strong> a 80 metros, con picos de hasta 4.3 m/s en primavera. Esto permite clasificar la viabilidad eólica como <strong>media</strong>, apta para tecnologías de baja velocidad de arranque.</p>
+  <p>➡️ Su perfil estacional estable y la predominancia de rangos entre 3 y 4 m/s justifican su análisis para microrredes o generación comunitaria.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Municipio con vocación vitivinícola y agrícola, cuenta con extensiones rurales y acceso vial aceptable. Algunas zonas cuentan con infraestructura eléctrica básica.</p>
+  <p>➡️ Se sugiere implementar proyectos <strong>en terrenos agrícolas compatibles</strong> con usos duales, como riego, cercanía a caminos y acceso a red secundaria.</p>
+</div>
+
 </div>
 
 <script>
