--- a/Municipios/Huimilpan.html
+++ b/Municipios/Huimilpan.html
@@ -105,18 +105,21 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Huimilpan presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Huimilpan se destaca como un caso particular dentro del estado de Querétaro: aunque sus velocidades medias a 80 metros oscilan entre 4.1 y 4.3 m/s, valores que comúnmente se asocian a escenarios de viabilidad intermedia, este municipio cuenta con un <strong>parque eólico operativo</strong>, lo cual valida empíricamente su aptitud técnica.</p>
+  <p>El comportamiento mensual revela un perfil consistente, con picos sostenidos en primavera y verano. El histograma muestra una dominancia en el rango de 4 a 5 m/s, lo que permite la operación efectiva de turbinas diseñadas para vientos bajos y control activo del ángulo de ataque (pitch control).</p>
+  <p>➡️ La existencia del parque no solo valida el potencial del recurso, sino que también implica disponibilidad de infraestructura previa como subestaciones, líneas de transmisión y acceso vial, factores que reducen considerablemente los costos de entrada para proyectos nuevos o ampliaciones.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Huimilpan ha transitado de un perfil meramente agrícola a una dinámica de desarrollo energético, gracias a la implementación del parque eólico en sus inmediaciones. Las zonas rurales al sur del municipio ofrecen topografía favorable y baja densidad de población, elementos clave para minimizar impactos sociales y ambientales.</p>
+  <p>La existencia del parque también implica que ya se ha realizado un análisis de uso de suelo y cumplimiento normativo. Esto crea una oportunidad para impulsar proyectos educativos, comunitarios o de microrredes conectadas al sistema actual, en colaboración con actores gubernamentales y privados.</p>
+  <p>➡️ La estrategia ideal en Huimilpan es <strong>replicar o ampliar el modelo existente</strong> bajo esquemas de inversión local o alianzas público-privadas, aprovechando su posición como pionero en generación eólica dentro del estado.</p>
+</div>
+
 </div>
 
 <script>
