--- a/Municipios/Jalpan_de_serra.html
+++ b/Municipios/Jalpan_de_serra.html
@@ -105,18 +105,20 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Jalpan de Serra presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>A 80 metros de altura, Jalpan de Serra mantiene velocidades medias del viento cercanas a los 3.5–3.6 m/s, lo que sugiere una viabilidad técnica <strong>moderada-baja</strong>. Aunque los valores son consistentes durante varios meses, están por debajo del umbral óptimo para aerogeneradores convencionales, por lo que solo serían adecuados modelos de turbinas adaptadas a vientos suaves y con baja velocidad de corte.</p>
+  <p>➡️ El patrón mensual y estacional indica cierta estabilidad, con máximos entre marzo y junio. Sin embargo, la poca variabilidad en el histograma (concentrado casi exclusivamente en el rango 3–4 m/s) sugiere limitaciones en términos de producción energética continua y rentable.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Jalpan de Serra se encuentra en una zona de alto valor ecológico, dentro de la Reserva de la Biosfera Sierra Gorda, lo cual impone restricciones importantes para proyectos de infraestructura a gran escala. La fragmentación del terreno, la topografía montañosa y los marcos regulatorios ambientales limitan severamente la disponibilidad de áreas amplias para parques eólicos.</p>
+  <p>No obstante, existe una oportunidad para explorar soluciones comunitarias como microrredes con aerogeneradores de baja potencia en zonas despejadas o periurbanas, especialmente si se integran con otras fuentes renovables como solar fotovoltaica.</p>
+  <p>➡️ Se recomienda priorizar estudios de impacto ambiental, análisis de accesibilidad logística y consultas comunitarias antes de cualquier iniciativa energética en la región.</p>
+</div>
+
 </div>
 
 <script>
