--- a/Municipios/Landa_de_matamoros.html
+++ b/Municipios/Landa_de_matamoros.html
@@ -105,19 +105,21 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Landa de Matamoros presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
-
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Aunque Landa de Matamoros presenta velocidades medias de hasta 3.4 m/s a 80 metros, estos valores se encuentran por debajo del umbral recomendado para la operación eficiente de aerogeneradores estándar. La distribución mensual es estable, pero permanece limitada en intensidad, lo que reduce su capacidad para sostener proyectos comerciales de generación eólica.</p>
+  <p>➡️ Desde el punto de vista técnico, la implementación de turbinas especializadas de muy baja velocidad de corte (< 3 m/s) podría explorarse, pero bajo un enfoque experimental o comunitario, no industrial.</p>
 </div>
+
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Landa de Matamoros se encuentra en una región de la Sierra Gorda con alta biodiversidad, terrenos montañosos y fuerte regulación ambiental. Estas características limitan severamente el acceso, la construcción de infraestructura pesada y el aprovechamiento extensivo del suelo.</p>
+  <p>La dispersión poblacional y la falta de líneas de transmisión cercanas también dificultan la integración a la red eléctrica.</p>
+  <p>➡️ En lugar de proyectos a gran escala, se sugiere priorizar la instalación de sistemas híbridos (eólico-solar) en zonas rurales desconectadas de la red, con enfoque social y ambientalmente responsable.</p>
+</div>
+
+
 
 <script>
   const dashboardData = {"2018": {"kpi_10": 2.5, "kpi_80": 3.39, "monthly_10": [2.45, 2.28, 2.33, 2.3, 2.47, 2.43, 2.54, 2.73, 2.69, 2.68, 2.58, 2.52], "monthly_80": [3.33, 3.1, 3.16, 3.12, 3.35, 3.3, 3.45, 3.71, 3.65, 3.64, 3.5, 3.42], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.42, 2.37, 2.57, 2.65], "season_80": [3.28, 3.21, 3.49, 3.6]}, "2019": {"kpi_10": 2.5, "kpi_80": 3.39, "monthly_10": [2.37, 2.41, 2.2, 2.35, 2.4, 2.58, 2.53, 2.75, 2.64, 2.63, 2.68, 2.44], "monthly_80": [3.22, 3.27, 2.99, 3.19, 3.26, 3.5, 3.44, 3.73, 3.59, 3.57, 3.64, 3.31], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 1, 11, 0, 0], "season_10": [2.41, 2.32, 2.62, 2.65], "season_80": [3.27, 3.15, 3.56, 3.6]}, "2020": {"kpi_10": 2.5, "kpi_80": 3.4, "monthly_10": [2.4, 2.39, 2.28, 2.29, 2.4, 2.45, 2.64, 2.61, 2.73, 2.75, 2.67, 2.42], "monthly_80": [3.26, 3.25, 3.1, 3.11, 3.26, 3.33, 3.59, 3.54, 3.71, 3.73, 3.63, 3.29], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.4, 2.32, 2.57, 2.72], "season_80": [3.27, 3.16, 3.49, 3.69]}, "2021": {"kpi_10": 2.49, "kpi_80": 3.38, "monthly_10": [2.36, 2.24, 2.38, 2.35, 2.47, 2.37, 2.53, 2.62, 2.7, 2.8, 2.57, 2.46], "monthly_80": [3.2, 3.04, 3.23, 3.19, 3.35, 3.22, 3.44, 3.56, 3.67, 3.8, 3.49, 3.34], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.35, 2.4, 2.51, 2.69], "season_80": [3.19, 3.26, 3.41, 3.65]}, "2022": {"kpi_10": 2.5, "kpi_80": 3.39, "monthly_10": [2.44, 2.35, 2.27, 2.37, 2.4, 2.51, 2.71, 2.55, 2.61, 2.71, 2.61, 2.46], "monthly_80": [3.31, 3.19, 3.08, 3.22, 3.26, 3.41, 3.68, 3.46, 3.54, 3.68, 3.54, 3.34], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.42, 2.35, 2.59, 2.64], "season_80": [3.28, 3.19, 3.52, 3.59]}, "2023": {"kpi_10": 2.47, "kpi_80": 3.36, "monthly_10": [2.26, 2.36, 2.3, 2.39, 2.27, 2.56, 2.67, 2.63, 2.61, 2.6, 2.51, 2.53], "monthly_80": [3.07, 3.2, 3.12, 3.25, 3.08, 3.48, 3.63, 3.57, 3.54, 3.53, 3.41, 3.44], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 0, 12, 0, 0], "season_10": [2.38, 2.32, 2.62, 2.57], "season_80": [3.24, 3.15, 3.56, 3.49]}, "2024": {"kpi_10": 2.49, "kpi_80": 3.38, "monthly_10": [2.41, 2.45, 2.2, 2.27, 2.39, 2.48, 2.65, 2.67, 2.7, 2.6, 2.61, 2.41], "monthly_80": [3.27, 3.33, 2.99, 3.08, 3.25, 3.37, 3.6, 3.63, 3.67, 3.53, 3.54, 3.27], "hist_10": [0, 12, 0, 0, 0], "hist_80": [0, 1, 11, 0, 0], "season_10": [2.42, 2.29, 2.6, 2.64], "season_80": [3.29, 3.11, 3.53, 3.58]}, "months": ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]};
