--- a/Municipios/Queretaro.html
+++ b/Municipios/Queretaro.html
@@ -105,18 +105,20 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Querétaro Capital presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Querétaro capital presenta velocidades promedio de viento en torno a <strong>3.6–3.7 m/s a 80 metros</strong>, lo que sugiere una viabilidad técnica <strong>media</strong>. Aunque no alcanza los niveles ideales para parques eólicos de gran escala, la estabilidad del recurso durante todo el año permite considerar soluciones adaptadas.</p>
+  <p>➡️ Las condiciones son aptas para tecnologías de baja velocidad de corte (< 3.5 m/s), como aerogeneradores verticales o pequeños aerogeneradores comunitarios, ideales para integración en edificios, industrias o techos de almacenes logísticos.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Como zona metropolitana, el municipio de Querétaro enfrenta limitaciones territoriales para proyectos eólicos tradicionales debido al alto grado de urbanización, uso mixto del suelo y densidad poblacional.</p>
+  <p>➡️ Se sugiere enfocar el potencial eólico en aplicaciones distribuidas o híbridas (solar-eólica), especialmente en parques industriales y zonas periurbanas donde ya existen techos de gran superficie y demanda energética constante.</p>
+  <p>Además, la cercanía a infraestructura eléctrica facilita la interconexión a la red sin necesidad de nuevas líneas de transmisión.</p>
+</div>
+
 </div>
 
 <script>
