--- a/Municipios/San_Pedro_Escobedo.html
+++ b/Municipios/San_Pedro_Escobedo.html
@@ -105,18 +105,20 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>San Pedro Escobedo presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>San Pedro Escobedo muestra una velocidad de viento promedio de <strong>4.75 a 4.85 m/s</strong> a 80 m de altura, con registros mensuales y estacionales altamente estables. Estos valores lo posicionan como uno de los municipios con mejor recurso eólico en Querétaro, ideal para el desarrollo de proyectos sostenibles.</p>
+  <p>➡️ La consistencia del viento durante todo el año permite considerar proyectos de <strong>escala mediana a grande</strong>, incluyendo microparques industriales o generación distribuida conectada a la red, utilizando aerogeneradores de velocidad de corte baja o media.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>El municipio cuenta con zonas rurales, agrícolas e industriales en expansión que favorecen la instalación de infraestructura energética, especialmente en áreas con baja densidad poblacional y proximidad a caminos o subestaciones eléctricas.</p>
+  <p>➡️ Se recomienda realizar estudios específicos de microzonificación y análisis anemométricos en zonas como El Sauz Alto, La Lira y San Fandila, que cuentan con espacio y uso del suelo compatibles con energías renovables.</p>
+  <p>Además, dada su cercanía con zonas de consumo industrial y logístico (Corregidora, El Marqués, Querétaro capital), podría fungir como nodo estratégico de generación limpia para la región metropolitana.</p>
+</div>
+
 </div>
 
 <script>
