--- a/Municipios/San_joaquin.html
+++ b/Municipios/San_joaquin.html
@@ -105,18 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>San Joaquín presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>San Joaquín presenta velocidades medias cercanas a los <strong>4 m/s</strong> a 80 metros de altura, con picos superiores a <strong>4.3 m/s</strong> en los meses de verano y otoño. Aunque los valores no alcanzan el umbral ideal de 5 m/s, su constancia y la topografía del municipio lo hacen <strong>moderadamente viable</strong> para el aprovechamiento eólico.</p>
+  <p>➡️ Puede ser considerado para proyectos <strong>comunitarios o de generación distribuida</strong> en zonas rurales, con aerogeneradores de <strong>bajo régimen de arranque</strong> (<em>low cut-in speed</em>) y adaptados a condiciones de viento medio.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>San Joaquín cuenta con una orografía montañosa y altitudes elevadas, lo que favorece la aceleración de viento en ciertos puntos de valle y cresta. Además, el bajo nivel de urbanización permite considerar espacios para <strong>infraestructura de pequeña escala</strong> sin conflictos significativos de uso de suelo.</p>
+  <p>➡️ Se recomienda implementar estudios locales de <strong>microzonificación anemométrica</strong> para detectar zonas óptimas, especialmente en áreas con acceso carretero y cercanía a comunidades que puedan beneficiarse de esquemas de autosuficiencia energética.</p>
+</div>
+
 </div>
 
 <script>
