--- a/Municipios/San_juan_del_rio.html
+++ b/Municipios/San_juan_del_rio.html
@@ -105,18 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>San Juan del Río presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+<h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>San Juan del Río muestra velocidades medias consistentes entre <strong>4.7 y 4.8 m/s</strong>, con picos recurrentes por encima de los <strong>5.0 m/s</strong> especialmente durante los meses de verano y otoño. Estos valores se ubican en el rango óptimo para la generación eólica con turbinas comerciales de clase III y IV.</p>
+  <p>➡️ El municipio es <strong>técnicamente viable</strong> para proyectos eólicos de mediana escala, con posibilidades de conexión a la red eléctrica debido a su infraestructura semiurbana. El comportamiento estable anual refuerza su potencial.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>San Juan del Río cuenta con zonas industriales, semiurbanas y agrícolas que podrían integrarse en modelos híbridos de consumo y generación. Además, su cercanía con la red de transmisión eléctrica facilita la integración de proyectos eólicos.</p>
+  <p>➡️ Se recomienda enfocar los estudios de factibilidad en <strong>zonas rurales planas</strong> al sur del municipio, aprovechando el relieve favorable y la cercanía a subestaciones eléctricas. Existe potencial para <strong>proyectos industriales autosuficientes</strong> o <strong>microparques conectados a red</strong>.</p>
+</div>
+
 </div>
 
 <script>
