--- a/Municipios/Toliman.html
+++ b/Municipios/Toliman.html
@@ -105,18 +105,18 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Tolimán presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+ <div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Tolimán presenta velocidades medias entre 0.5 y 0.6 m/s a 80 metros, lo que indica una viabilidad eólica <strong>baja</strong>. No se recomienda para parques eólicos sin un estudio detallado y tecnología de ultra baja velocidad de corte.</p>
+  <p>➡️ Se sugiere considerar otras fuentes renovables o ubicaciones alternas.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, algunas zonas podrían permitir generación eléctrica limpia. No obstante, las condiciones eólicas actuales no lo hacen competitivo sin incentivos especiales.</p>
+  <p>➡️ Se requiere evaluación económica para justificar la inversión.</p>
+</div>
+
 </div>
 
 <script>
