--- a/Municipios/Penamiller.html
+++ b/Municipios/Penamiller.html
@@ -105,18 +105,19 @@
   <h2>🌤️ Promedio por estación</h2>
   <canvas id="seasonChart"></canvas>
 
-  <h2>📊 Evaluación de Viabilidad</h2>
-  <div class="note">
-    <h3>✅ Viabilidad técnica – 80 m</h3>
-    <p>Peñamiller presenta velocidades medias entre 4 y 5 m/s a 80 metros, lo que indica una viabilidad eólica <strong>moderada</strong> con el uso de aerogeneradores de baja velocidad de corte.</p>
-    <p>➡️ Puede considerarse viable para proyectos de mediana escala o microparques si se integran tecnologías adaptadas al entorno urbano-rural.</p>
-  </div>
+ <h2>📊 Evaluación de Viabilidad</h2>
+<div class="note">
+  <h3>✅ Viabilidad técnica – 80 m</h3>
+  <p>Peñamiller presenta una velocidad promedio de <strong>4.1 m/s</strong> a 80 metros, lo que representa una viabilidad eólica <strong>media-baja</strong>. Aunque no se alcanzan los niveles óptimos para aerogeneradores comerciales, podría explorarse el uso de tecnologías de baja velocidad de arranque o aplicaciones en microgeneración.</p>
+  <p>➡️ Se sugiere realizar estudios más detallados en zonas elevadas o corredores de viento dentro del municipio para evaluar su potencial real.</p>
+</div>
 
-  <div class="note">
-    <h3>📍 Consideración territorial</h3>
-    <p>Según el <strong>Plan de Desarrollo Urbano de Querétaro</strong>, ciertas zonas del municipio permiten la generación eléctrica limpia, incluyendo la eólica. Sin embargo, la disponibilidad de grandes extensiones de terreno puede estar limitada.</p>
-    <p>➡️ Se recomienda análisis de microzonificación para identificar parcelas adecuadas.</p>
-  </div>
+<div class="note">
+  <h3>📍 Consideración territorial</h3>
+  <p>Peñamiller es una región predominantemente rural con zonas montañosas y baja densidad urbana. Esto podría facilitar la implementación de proyectos eólicos a pequeña escala, siempre que se respeten las normativas del <strong>Plan de Ordenamiento Ecológico Territorial</strong>.</p>
+  <p>➡️ Es recomendable realizar un análisis ambiental y social participativo antes de instalar infraestructura eólica.</p>
+</div>
+
 </div>
 
 <script>
