--- a/Documentation.html
+++ b/Documentation.html
@@ -207,7 +207,7 @@ Desde entonces genera electricidad eólica que ya alimenta la red eléctrica nac
     <div class="block">
       <div class="text-content">
         <h2>Visualización del Potencial Eólico – Dashboard Interactivo</h2>
-        <p>Como parte del análisis, se desarrolló un dashboard interactivo que permite visualizar el comportamiento del viento en El Marqués (Querétaro) utilizando datos históricos procesados (2018–2024) a dos alturas: 10 m (medición estándar) y 80 m (altura operativa de aerogeneradores).
+        <p>Como parte del análisis, se desarrolló un dashboard interactivo que permite visualizar el comportamiento del viento en los diferentes municipios del estado de Querétaro utilizando datos históricos procesados (2018–2024) a dos alturas: 10 m (medición estándar) y 80 m (altura operativa de aerogeneradores).
 
 Este panel incluye:
 <p> </p>
